--- a/src/pages/orders/detailView/detailView.css
+++ b/src/pages/orders/detailView/detailView.css
@@ -67,11 +67,8 @@
     }
 }
 
-.line {
-    width: 200px;
-    height: 1px;
-    background-color: black;
-    color: black;
+.oreder-details-wrapper {
+    position: relative;
 }
 
 .oreder-details-wrapper table {
@@ -82,6 +79,11 @@
 
 .oreder-details-wrapper table, th, td {
     padding: 5px;
+    font-size: 10px;
+}
+
+.subtitle {
+    font-size: 16px !important;
 }
 
 .oreder-details-wrapper table thead th {
@@ -110,4 +112,92 @@
 .oreder-details-wrapper table td p {
     font-weight: 400;
     margin: 0;
+}
+
+.order-detail-header {
+    padding: 20px 40px;
+    display: flex;
+    align-items: center;
+}
+
+.order-detail-header .branch-details {
+    display: flex;
+    flex-direction: column;
+}
+
+.order-detail-header .branch-details .name {
+    text-align: center;
+    font-size: 32px !important;
+    font-weight: 600;
+}
+
+.order-detail-header .branch-details * {
+    margin-left: 50px;
+    font-size: 16px;
+    font-weight: 600;
+}
+
+.main-details-top {
+    padding: 10px 40px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.main-details-top * {
+    font-size: 14px;
+    font-weight: 600;
+}
+
+.main-details-top .item:nth-child(3) {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+
+.main-details-top .item:nth-child(3) span {
+    font-weight: 500;
+    border-bottom: 1px solid black;
+    padding: 0 10px;
+}
+
+.main-details-top-items {
+    padding: 10px 40px;
+}
+
+.main-details-top-items .item {
+    display: flex;
+    flex-direction: column;
+}
+
+.main-details-top-items .item * {
+    font-weight: 500;
+    font-size: 12px;
+}
+
+.MuiCardContent-root .MuiTypography-h6 {
+    font-size: 14px !important;
+}
+
+.MuiCardContent-root .MuiTypography-root {
+    font-size: 12px;
+}
+
+.print-info {
+    display: flex;
+    align-items: end;
+    justify-content: space-between;
+    width: 100%;
+    height: 10px;
+    padding: 20px 16px;
+    margin-top: 100px;
+}
+
+.line {
+    width: 150px;
+    height: 1px;
+    border-bottom: 1px solid black;
+    display: flex;
+    align-items: end;
+    margin-top: 300px;
 }
