--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -13,19 +13,21 @@
 
 .home .custom-table th,
 .custom-table td {
-    padding: 10px;
-    text-align: left;
-    border-bottom: 1px solid #fff;
+    padding: 10px !important;
+    text-align: left !important;
+    border-bottom: 1px solid #fff !important;
 }
 
 .home .custom-table th {
     color: var(--text-color);
     font-weight: 500;
+    font-size: 16px;
 }
 
 .custom-table td {
     color: var(--text-color);
     font-weight: 300;
+    font-size: 14px;
 }
 
 .custom-table {
